@@ -1,3 +1,8 @@
+Wed Aug  4 20:45:04 1999  J"orn Rennecke <amylaar@cygnus.co.uk>
+
+	* final.c (shorten_branches): Don't add an alignment for loops
+	that have no label inside.
+
 Wed Aug  4 16:39:24 1999  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* builtins.c (expand_builtin_memcmp, expand_builtin_strcmp): Wrap
